[SV] feature(infinite scroll): - added infinite scroll feature to `PhotoGalleryScreen` using LazyVerticalGrid and snapshotFlow. - integrated logic to automatically load more photos when the user scrolls to the end of the list. - updated `PhotoGalleryViewModel` to handle pagination and manage loading states for continuous data fetching. - ensured smooth UX by displaying a loading indicator at the bottom during data fetch. - add snackbar to improve user experience when offline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">flickr</string>
+    <string name="search_flickr">Search Flickr</string>
+    <string name="no_internet_connection">No internet connection! &#xA;Please check your network settings.</string>
+    <string name="search_icon">Search Icon</string>
+    <string name="image_placeholder">image placeholder</string>
+    <string name="loading_details">Loading details...</string>
+    <string name="no_description_available">No description available</string>
+    <string name="date_not_available">Date not available</string>
+    <string name="back_to_gallery">Back to Gallery</string>
+    <string name="show_details">Show Details</string>
 </resources>
